[package]
name = "htmlq"
description = "Like jq, but for HTML."
categories = ["command-line-utilities"]
keywords = ["CSS", "HTML", "query"]
repository = "https://github.com/mgdm/htmlq"
documentation = "https://github.com/mgdm/htmlq/blob/master/README.md"
readme = "README.md"
license = "MIT"
license-file = "LICENSE.md"
version = "0.4.0"
authors = ["Michael Maclean <michael@mgdm.net>"]
edition = "2018"
exclude = ["/.github"]

[dependencies]
clap = "2.33.3"
html5ever = "0.25.1"
kuchiki = "0.8.1"
lazy_static = "1.4.0"
serde_json = "1.0"
url = "2.2.2"
